--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,6 +26,10 @@ jobs:
       - run:
           name: Build application
           command: npm run build
+
+      - store_artifacts:
+          path: coverage/lcov.info
+          destination: coverate_report
 workflows:
   version: 2
 
