--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,7 @@ version: 2.1
 orbs:
   node: circleci/node@4.1
   heroku: circleci/heroku@1.2.6
+  sonarcloud: sonarsource/sonarcloud@1.0.2
 
 jobs:
   build-and-test:
@@ -29,6 +30,10 @@ jobs:
       - run:
           name: Build application
           command: npm run build
+      
+      - sonarcloud/scan:
+          sonar_token_variable_name: SONAR_TOKEN 
+
 workflows:
   version: 2
 
