--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,3 +3,5 @@ sonar.exclusions=src/__tests__/**
 sonar.tests=src/__tests__
 sonar.testExecutionReportPaths=test-report.xml
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
+sonar.projectKey=g1-acelera_carango-bom-base
+sonar.organization=g1-acelera
