--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,4 @@
-sonar.sources=src
+sonar.sources=carango-bom-base/src
 sonar.exclusions=src/__tests__/**
 sonar.tests=src/__tests__
 sonar.testExecutionReportPaths=test-report.xml
