--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 sonar.sources=carango-bom-base/src
-sonar.exclusions=src/__tests__/**
-sonar.tests=src/__tests__
+sonar.exclusions=carango-bom-base/src/__tests__/**
+sonar.tests=carango-bom-base/src/__tests__
 sonar.testExecutionReportPaths=test-report.xml
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
 sonar.projectKey=g1-acelera_carango-bom-base
