--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-table": "^7.7.0",
     "serve": "^11.3.2",
     "web-vitals": "^1.1.1"
   },
