--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
+    "@unicef/material-ui-currency-textfield": "^0.8.6",
     "fontsource-roboto": "^4.0.0",
     "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
