--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
     "@testing-library/react": "^11.2.6",
     "fontsource-roboto": "^4.0.0",
     "history": "^5.0.0",
+    "jest-fetch-mock": "^3.0.3",
     "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-number-format": "^4.6.4",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
     "react-table": "^7.7.0",
     "serve": "^11.3.2",
     "web-vitals": "^1.1.1"
